cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_390.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/pmeth_lib.c:537: error: DEAD_STORE
  The value written to &p (type ossl_param_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/pmeth_lib.c:537:6: Write of unused value
535.                                               name,
536.                                               sizeof(name));
537.       *p++ = OSSL_PARAM_construct_end();
            ^
538.   
539.       if (!EVP_PKEY_CTX_get_params(ctx, sig_md_params))
